--- a/Bonsai.Audio/Bonsai.Audio.csproj
+++ b/Bonsai.Audio/Bonsai.Audio.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="openal.redist" Version="2.0.7" />
-    <PackageReference Include="OpenCV.Net" Version="3.3.1" />
+    <PackageReference Include="OpenCV.Net" Version="3.4.0-preview3" />
     <PackageReference Include="OpenTK" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
