--- a/Bonsai.Dsp.Design/Bonsai.Dsp.Design.csproj
+++ b/Bonsai.Dsp.Design/Bonsai.Dsp.Design.csproj
@@ -9,6 +9,9 @@
     <Version>2.7.0</Version>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="OpenCV.Net" Version="3.4.0-preview3" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Bonsai.Design.Visualizers\Bonsai.Design.Visualizers.csproj" />
     <ProjectReference Include="..\Bonsai.Dsp\Bonsai.Dsp.csproj" />
   </ItemGroup>
