--- a/Bonsai.Editor/Bonsai.Editor.csproj
+++ b/Bonsai.Editor/Bonsai.Editor.csproj
@@ -13,6 +13,7 @@
     <EmbeddedResource Include="**\*.svg" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="OpenCV.Net" Version="3.4.0-preview3" />
     <PackageReference Include="Rx-PlatformServices" Version="2.2.5" />
     <PackageReference Include="SvgNet" Version="2.0.1" />
   </ItemGroup>
