--- a/Bonsai.NuGet.Design/Bonsai.NuGet.Design.csproj
+++ b/Bonsai.NuGet.Design/Bonsai.NuGet.Design.csproj
@@ -8,6 +8,9 @@
     <Version>2.6.3</Version>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="OpenCV.Net" Version="3.4.0-preview3" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Bonsai.Design\Bonsai.Design.csproj" />
     <ProjectReference Include="..\Bonsai.NuGet\Bonsai.NuGet.csproj" />
   </ItemGroup>
