--- a/Bonsai.Osc/Bonsai.Osc.csproj
+++ b/Bonsai.Osc/Bonsai.Osc.csproj
@@ -8,6 +8,9 @@
     <Version>2.7.0</Version>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="OpenCV.Net" Version="3.4.0-preview3" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Bonsai.System\Bonsai.System.csproj" />
   </ItemGroup>
 </Project>
