--- a/Bonsai.Scripting/Bonsai.Scripting.csproj
+++ b/Bonsai.Scripting/Bonsai.Scripting.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="IronPython" Version="2.7.5" />
     <PackageReference Include="IronPython.StdLib" Version="2.7.5" />
     <PackageReference Include="jacobslusser.ScintillaNET" Version="3.6.3" />
+    <PackageReference Include="OpenCV.Net" Version="3.4.0-preview3" />
     <PackageReference Include="System.Linq.Dynamic" Version="1.0.7" />
   </ItemGroup>
   <ItemGroup>
