--- a/Bonsai.Shaders.Rendering/Bonsai.Shaders.Rendering.csproj
+++ b/Bonsai.Shaders.Rendering/Bonsai.Shaders.Rendering.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AssimpNet" Version="4.1.0" />
+    <PackageReference Include="OpenCV.Net" Version="3.4.0-preview3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bonsai.Shaders\Bonsai.Shaders.csproj" />
