--- a/Bonsai.Shaders/Bonsai.Shaders.csproj
+++ b/Bonsai.Shaders/Bonsai.Shaders.csproj
@@ -8,7 +8,7 @@
     <Version>0.26.0</Version>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="OpenCV.Net" Version="3.3.1" />
+    <PackageReference Include="OpenCV.Net" Version="3.4.0-preview3" />
     <PackageReference Include="OpenTK" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
