--- a/Bonsai.System.Design/Bonsai.System.Design.csproj
+++ b/Bonsai.System.Design/Bonsai.System.Design.csproj
@@ -9,6 +9,9 @@
     <Version>2.7.0</Version>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="OpenCV.Net" Version="3.4.0-preview3" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Bonsai.Design\Bonsai.Design.csproj" />
     <ProjectReference Include="..\Bonsai.System\Bonsai.System.csproj" />
   </ItemGroup>
