--- a/Bonsai.Vision.Design/Bonsai.Vision.Design.csproj
+++ b/Bonsai.Vision.Design/Bonsai.Vision.Design.csproj
@@ -9,6 +9,7 @@
     <Version>2.6.1</Version>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="OpenCV.Net" Version="3.4.0-preview3" />
     <PackageReference Include="OpenTK.GLControl" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
