Add support for EncodeImage and DecodeImage
Fixes #830

--- a/Bonsai.Vision.Design/Bonsai.Vision.Design.csproj
+++ b/Bonsai.Vision.Design/Bonsai.Vision.Design.csproj
@@ -15,4 +15,7 @@
     <ProjectReference Include="..\Bonsai.Design.Visualizers\Bonsai.Design.Visualizers.csproj" />
     <ProjectReference Include="..\Bonsai.Vision\Bonsai.Vision.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Design" />
+  </ItemGroup>
 </Project>
