Rename python scripting package

--- a/Bonsai.Scripting.IronPython.Design/Bonsai.Scripting.IronPython.Design.csproj
+++ b/Bonsai.Scripting.IronPython.Design/Bonsai.Scripting.IronPython.Design.csproj
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <Title>Bonsai - Python Scripting Design Library</Title>
-    <Description>Bonsai Design Library containing editor classes for Python scripting in Bonsai.</Description>
-    <PackageTags>Bonsai Rx Scripting Python Design</PackageTags>
+    <Title>Bonsai - IronPython Scripting Design Library</Title>
+    <Description>Bonsai Design Library containing editor classes for IronPython scripting in Bonsai.</Description>
+    <PackageTags>Bonsai Rx Scripting Iron Python Design</PackageTags>
     <UseWindowsForms>true</UseWindowsForms>
     <TargetFramework>net462</TargetFramework>
     <Version>2.7.0</Version>
@@ -12,6 +12,6 @@
     <PackageReference Include="jacobslusser.ScintillaNET" Version="3.6.3" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Bonsai.Scripting.Python\Bonsai.Scripting.Python.csproj" />
+    <ProjectReference Include="..\Bonsai.Scripting.IronPython\Bonsai.Scripting.IronPython.csproj" />
   </ItemGroup>
 </Project>
