--- a/Bonsai.Scripting.IronPython/Bonsai.Scripting.IronPython.csproj
+++ b/Bonsai.Scripting.IronPython/Bonsai.Scripting.IronPython.csproj
@@ -5,7 +5,7 @@
     <Description>Bonsai Scripting Library containing IronPython scripting infrastructure for Bonsai.</Description>
     <PackageTags>Bonsai Rx Scripting Iron Python</PackageTags>
     <TargetFramework>net462</TargetFramework>
-    <Version>2.7.0</Version>
+    <VersionPrefix>2.7.0</VersionPrefix>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="IronPython" Version="2.7.5" />
