--- a/Bonsai.Arduino/Bonsai.Arduino.csproj
+++ b/Bonsai.Arduino/Bonsai.Arduino.csproj
@@ -5,7 +5,7 @@
     <Description>Bonsai Arduino Library containing communication infrastructure to probe and control the state of Arduino microcontrollers.</Description>
     <PackageTags>Bonsai Rx Arduino</PackageTags>
     <TargetFramework>net462</TargetFramework>
-    <Version>2.6.0</Version>
+    <VersionPrefix>2.6.0</VersionPrefix>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bonsai.System\Bonsai.System.csproj" />
