--- a/Bonsai.Design.Visualizers/Bonsai.Design.Visualizers.csproj
+++ b/Bonsai.Design.Visualizers/Bonsai.Design.Visualizers.csproj
@@ -6,7 +6,7 @@
     <PackageTags>Bonsai Rx Visualizers</PackageTags>
     <UseWindowsForms>true</UseWindowsForms>
     <TargetFramework>net462</TargetFramework>
-    <Version>2.7.0</Version>
+    <VersionPrefix>2.7.0</VersionPrefix>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ZedGraph" Version="5.1.7" />
