--- a/Bonsai.Dsp.Design/Bonsai.Dsp.Design.csproj
+++ b/Bonsai.Dsp.Design/Bonsai.Dsp.Design.csproj
@@ -6,7 +6,7 @@
     <PackageTags>Bonsai Rx Dsp Visualizers</PackageTags>
     <UseWindowsForms>true</UseWindowsForms>
     <TargetFramework>net462</TargetFramework>
-    <Version>2.7.0</Version>
+    <VersionPrefix>2.7.0</VersionPrefix>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bonsai.Design.Visualizers\Bonsai.Design.Visualizers.csproj" />
