--- a/Bonsai.Osc/Bonsai.Osc.csproj
+++ b/Bonsai.Osc/Bonsai.Osc.csproj
@@ -5,7 +5,7 @@
     <Description>Bonsai Osc Library containing reactive infrastructure to interface with devices using the Open Sound Control protocol.</Description>
     <PackageTags>Bonsai Rx Osc</PackageTags>
     <TargetFramework>net462</TargetFramework>
-    <Version>2.7.0</Version>
+    <VersionPrefix>2.7.0</VersionPrefix>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bonsai.System\Bonsai.System.csproj" />
