--- a/Bonsai.Scripting.Expressions/Bonsai.Scripting.Expressions.csproj
+++ b/Bonsai.Scripting.Expressions/Bonsai.Scripting.Expressions.csproj
@@ -5,7 +5,7 @@
     <Description>Bonsai Scripting Library containing expression scripting infrastructure for Bonsai.</Description>
     <PackageTags>Bonsai Rx Scripting Expressions</PackageTags>
     <TargetFramework>net462</TargetFramework>
-    <Version>2.7.0</Version>
+    <VersionPrefix>2.7.0</VersionPrefix>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.Linq.Dynamic" Version="1.0.7" />
