--- a/Bonsai.Scripting/Bonsai.Scripting.csproj
+++ b/Bonsai.Scripting/Bonsai.Scripting.csproj
@@ -6,7 +6,7 @@
     <PackageTags>Bonsai Rx Scripting</PackageTags>
     <UseWindowsForms>true</UseWindowsForms>
     <TargetFramework>net462</TargetFramework>
-    <Version>2.7.0</Version>
+    <VersionPrefix>2.7.0</VersionPrefix>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bonsai.System\Bonsai.System.csproj" />
