--- a/Bonsai.Windows.Input/Bonsai.Windows.Input.csproj
+++ b/Bonsai.Windows.Input/Bonsai.Windows.Input.csproj
@@ -6,7 +6,7 @@
     <PackageTags>Bonsai Rx Windows Input</PackageTags>
     <UseWindowsForms>true</UseWindowsForms>
     <TargetFramework>net462</TargetFramework>
-    <Version>2.7.0</Version>
+    <VersionPrefix>2.7.0</VersionPrefix>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bonsai.Core\Bonsai.Core.csproj" />
