--- a/Bonsai.NuGet/Bonsai.NuGet.csproj
+++ b/Bonsai.NuGet/Bonsai.NuGet.csproj
@@ -7,7 +7,7 @@
     <VersionPrefix>2.7.0</VersionPrefix>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Rx-Main" Version="2.2.5" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
     <PackageReference Include="NuGet.Protocol" Version="6.1.0" />
     <PackageReference Include="NuGet.Resolver" Version="6.1.0" />
   </ItemGroup>
