--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project>
   <PropertyGroup>
     <Authors>Gonçalo Lopes</Authors>
-    <Copyright>Copyright © Gonçalo Lopes 2011-2022</Copyright>
+    <Copyright>Copyright © Gonçalo Lopes 2011-2023</Copyright>
     <PackageProjectUrl>https://bonsai-rx.org</PackageProjectUrl>
     <PackageLicenseUrl>https://bonsai-rx.org/license</PackageLicenseUrl>
     <PackageIconUrl>https://bonsai-rx.org/assets/images/bonsai.png</PackageIconUrl>
