--- a/Bonsai.Templates/Bonsai.Templates.csproj
+++ b/Bonsai.Templates/Bonsai.Templates.csproj
@@ -7,7 +7,7 @@
     <Title>Bonsai Templates</Title>
     <Authors>Bonsai</Authors>
     <Description>Templates for creating a C# Bonsai package (.nupkg)</Description>
-    <PackageTags>Bonsai Rx Package Templates</PackageTags>
+    <PackageTags>Bonsai Rx Package Environment Templates</PackageTags>
     <TargetFramework>netstandard2.0</TargetFramework>
     <IncludeContentInPack>true</IncludeContentInPack>
     <IncludeBuildOutput>false</IncludeBuildOutput>
