--- a/Bonsai.Editor/Bonsai.Editor.csproj
+++ b/Bonsai.Editor/Bonsai.Editor.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="**\*.svg" />
+    <EmbeddedResource Include="**\*.css" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="SvgNet" Version="3.2.0" />
