Enable native debugging for package projects

--- a/Bonsai.Templates/Bonsai.PackageTemplate/launchSettings.json
+++ b/Bonsai.Templates/Bonsai.PackageTemplate/launchSettings.json
@@ -3,7 +3,8 @@
     "Bonsai": {
       "commandName": "Executable",
       "executablePath": "$(registry:HKEY_CURRENT_USER\\Software\\Goncalo Lopes\\Bonsai@InstallDir)Bonsai.exe",
-      "commandLineArgs": "--lib:\"$(TargetDir).\""
+      "commandLineArgs": "--lib:\"$(TargetDir).\"",
+      "nativeDebugging": true
     }
   }
 }
