Add wxs extension to editor config file

--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@
 indent_style = space
 
 # XML project files
-[*.{csproj,vcxproj,vcxproj.filters,proj,projitems,shproj}]
+[*.{csproj,vcxproj,vcxproj.filters,proj,projitems,shproj,wxs}]
 indent_size = 2
 
 # XML config files
