Embed license and icon in template package

--- a/Bonsai.Player/Bonsai.Player.csproj
+++ b/Bonsai.Player/Bonsai.Player.csproj
@@ -11,6 +11,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageIcon>icon.png</PackageIcon>
+    <PackageIconUrl></PackageIconUrl>
     <VersionPrefix>2.8.0</VersionPrefix>
     <PackAsTool>true</PackAsTool>
   </PropertyGroup>
