--- a/Bonsai.Setup.Bootstrapper/packages.config
+++ b/Bonsai.Setup.Bootstrapper/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="vc143.wixproj.redist" version="0.1.0" />
-  <package id="WiX" version="3.11.2" />
+  <package id="wix" version="3.14.0" />
 </packages>
