Enabled building with the .NET SDK
The .NET SDK uses MSBuild Core rather than MSBuild Framework. One difference between them is that the legacy Windows-centric resource embedding was completely dropped from Core.
This updated resource embedding can be used with .NET Framework by using System.Resources.Extensions. (It only affects non-string resources like images, hence why only Bonsai.Design needs it.)

-------------------------------------------------

The new reference to System.Runtime.CompilerServices.Unsafe in Bonsai32 is to work around a quirk of how NuGet resolves the dependency graph.
There exists two paths to this package from the main Bonsai project (versions noted where important):
1) Bonsai -> Bonsai.Design -> System.Resources.Extensions -> System.Memory -> System.Runtime.CompilerServices.Unsafe/4.5.3
2) Bonsai -> System.Reflection.MetadataLoadContext->System.Collections.Immutable -> System.Runtime.CompilerServices.Unsafe/6.0.0

Path #2 is private to Bonsai, while Path #1 is not.
Because Path #2 is private, it isn't even part of the restore graph of Bonsai32.
As a result, Bonsai32 gets a transitive reference to S.R.CS.Unsafe 4.5.3 but Bonsai already has private reference to S.R.CS.Unsafe 6.0.0, resulting in a conflict.
This eventually results in a MSB3277 warning and can result in a completely broken build (if it weren't for the recent change the prevented Bonsai32 from clobbering Bonsai's output.)

--- a/Bonsai32/Bonsai32.csproj
+++ b/Bonsai32/Bonsai32.csproj
@@ -24,5 +24,12 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bonsai\Bonsai.csproj" Private="false" />
+
+    <!--
+      This reference is necessary to work around a ambiguity in the NuGet restore graph.
+      If you get MSB3277 warnings referencing this or other packages, add explicit references here for the newest
+      version referenced by the warning.
+    -->
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
   </ItemGroup>
 </Project>
