Migrate to building to central artifacts directory
More info: https://learn.microsoft.com/en-us/dotnet/core/sdk/artifacts-output
This also applies to the setup executables and VSIX projects even though they use legacy .NET SDK.

--- a/Bonsai/Bonsai.csproj
+++ b/Bonsai/Bonsai.csproj
@@ -76,7 +76,7 @@
   </Target>
   <Target Name="NuGetConfig" AfterTargets="Build">
     <WriteLinesToFile File="$(TargetDir)NuGet.config"
-                      Lines="$([System.IO.File]::ReadAllText('Properties\NuGet.config').Replace('%PackageDir%','$(ProjectDir)..\bin\$(Configuration)'))"
+                      Lines="$([System.IO.File]::ReadAllText('Properties\NuGet.config').Replace('%PackageDir%','$(PackageOutputPath)'))"
                       Overwrite="true"
                       WriteOnlyWhenDifferent="true" />
   </Target>
