--- a/Bonsai32/Bonsai32.csproj
+++ b/Bonsai32/Bonsai32.csproj
@@ -10,7 +10,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <VersionPrefix>2.8.3</VersionPrefix>
     <OutputType>Exe</OutputType>
-    <OutputPath>..\Bonsai\bin\$(Configuration)\</OutputPath>
+    <OutputPath>$(ArtifactsPath)\bin\Bonsai\$(Configuration.ToLowerInvariant())\</OutputPath>
     <ApplicationIcon>..\Bonsai.Editor\Bonsai.ico</ApplicationIcon>
     <ApplicationManifest>App.manifest</ApplicationManifest>
 
