Implement workaround for System.Resources.Extensions in the ILRepacked bootstrapper

--- a/Bonsai/Bonsai.csproj
+++ b/Bonsai/Bonsai.csproj
@@ -40,6 +40,20 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <!-- Embed System.Resources.Extensions and its dependencies, see Bonsai.SystemResourcesExtensionsSupport -->
+  <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
+    <PackageReference Include="System.Resources.Extensions" Version="8.0.0" GeneratePathProperty="true" PrivateAssets="all" />
+    <PackageReference Include="System.Memory" Version="4.5.5" GeneratePathProperty="true" PrivateAssets="all" />
+    <PackageReference Include="System.Buffers" Version="4.5.1" GeneratePathProperty="true" PrivateAssets="all" />
+    <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" GeneratePathProperty="true" PrivateAssets="all" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" GeneratePathProperty="true" PrivateAssets="all" />
+    <EmbeddedResource Include="$(PkgSystem_Resources_Extensions)/lib/net462/System.Resources.Extensions.dll" />
+    <EmbeddedResource Include="$(PkgSystem_Memory)/lib/net461/System.Memory.dll" />
+    <EmbeddedResource Include="$(PkgSystem_Buffers)/lib/net461/System.Buffers.dll" />
+    <EmbeddedResource Include="$(PkgSystem_Numerics_Vectors)/lib/net46/System.Numerics.Vectors.dll" />
+    <EmbeddedResource Include="$(PkgSystem_Runtime_CompilerServices_Unsafe)/lib/net461/System.Runtime.CompilerServices.Unsafe.dll" />
+  </ItemGroup>
+
   <Target Name="NuGetConfig" AfterTargets="Build">
     <WriteLinesToFile File="$(TargetDir)NuGet.config"
                       Lines="$([System.IO.File]::ReadAllText('Properties\NuGet.config').Replace('%PackageDir%','$(PackageOutputPath)'))"
@@ -72,13 +86,9 @@
 /out:"$(RepackedOutputFilePath)"
 /internalize:"$(MSBuildThisFileDirectory)InternalizeExcludePatterns"
 "$(OutputPath)Bonsai.exe"
-"$(OutputPath)System.Buffers.dll"
-"$(OutputPath)System.Memory.dll"
-"$(OutputPath)System.Numerics.Vectors.dll"
 "$(OutputPath)System.Collections.Immutable.dll"
 "$(OutputPath)System.Reflection.Metadata.dll"
 "$(OutputPath)System.Reflection.MetadataLoadContext.dll"
-"$(OutputPath)System.Runtime.CompilerServices.Unsafe.dll"
 "$(OutputPath)Bonsai.Configuration.dll"
 "$(OutputPath)Bonsai.NuGet.dll"
 "$(OutputPath)Bonsai.NuGet.Design.dll"
